--- a/client/index.html
+++ b/client/index.html
@@ -24,10 +24,13 @@
       <link rel="stylesheet" href="app/emergencia/emergencia.css">
       <link rel="stylesheet" href="app/especialidad/especialidad.css">
       <link rel="stylesheet" href="app/horario/horario.css">
+      <link rel="stylesheet" href="app/lista-reservas/lista-reservas.css">
       <link rel="stylesheet" href="app/login/login.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/medico/medico.css">
+      <link rel="stylesheet" href="app/mis-reservas/mis-reservas.css">
       <link rel="stylesheet" href="app/observacion/observacion.css">
+      <link rel="stylesheet" href="app/perfil/perfil.css">
       <link rel="stylesheet" href="app/persona/persona.css">
       <link rel="stylesheet" href="app/reporte/reporte.css">
       <link rel="stylesheet" href="app/reserva/reserva.css">
@@ -46,7 +49,6 @@
     <navbar></navbar>
     <div ui-view=""></div>
     <footer></footer>
-
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -72,14 +74,13 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-      <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/observacion/observacion.controller.js"></script>
+      <script src="app/mis-reservas/mis-reservas.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
       <script src="app/autenticacion/auteticacion.servicio.js"></script>
       <script src="app/autenticacion/usuario.servicio.js"></script>
@@ -89,14 +90,20 @@
       <script src="app/especialidad/especialidad.js"></script>
       <script src="app/horario/horario.controller.js"></script>
       <script src="app/horario/horario.js"></script>
+      <script src="app/lista-reservas/lista-reservas.controller.js"></script>
+      <script src="app/lista-reservas/lista-reservas.js"></script>
       <script src="app/login/login.controller.js"></script>
       <script src="app/login/login.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
       <script src="app/medico/medico.js"></script>
+      <script src="app/mis-reservas/mis-reservas.controller.js"></script>
       <script src="app/asegurado/asegurado.controller.js"></script>
+      <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/observacion/observacion.js"></script>
+      <script src="app/perfil/perfil.controller.js"></script>
+      <script src="app/perfil/perfil.js"></script>
       <script src="app/persona/persona.controller.js"></script>
       <script src="app/persona/persona.js"></script>
       <script src="app/reporte/reporte.controller.js"></script>
@@ -114,5 +121,6 @@
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
+      <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
