--- a/client/app/medico/medico.html
+++ b/client/app/medico/medico.html
@@ -10,20 +10,26 @@
         <thead>
           <tr>
             <th>Nro.</th>
-            <th>Nombres</th>
-            <th>Apellidos</th>
             <th>Matricula</th>
             <th>Especialidad</th>
+            <th>Nombres</th>
+            <th>Ap. Paterno</th>
+            <th>Ap. Materno</th>
+            <th>Genero</th>
+            <th>Fecha nacimiento</th>
             <th>Acciones</th>
           </tr>
         </thead>
         <tbody>
           <tr ng-repeat="med in vm.medicos">
             <th>{{$index+1}}</th>
-            <td>{{med.nombres}}</td>
-            <td>{{med.apellidos}}</td>
             <td>{{med.matricula}}</td>
             <td>{{med.Especialidad.nombre}}</td>
+            <td>{{med.Persona.nombres}}</td>
+            <td>{{med.Persona.apaterno}}</td>
+            <td>{{med.Persona.amaterno}}</td>
+            <td>{{med.Persona.genero}}</td>
+            <td>{{med.Persona.fecha_nacimineto}}</td>
             <td>
               <button  type="button" class="btn btn-info">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -66,12 +72,23 @@
                       </div>
                     </div>
                     <div class="col-md-12">
-                      <div class="form-group col-md-6">
+                      <div class="form-group col-md-4">
                         <label for="matricula">Matricula </label>
                         <input type="text" class="form-control" id="matricula" ng-model="vm.medico.matricula"
                                placeholder="Matricula">
                       </div>
-                      <div class="col-md-6">
+                      <div class="form-group col-md-4">
+                        <label for="genero">Genero </label>
+                        <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero" required="true"
+                               placeholder="Genero">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="fechanac">Fecha Nac. </label>
+                        <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
+                               placeholder="AA-MM-DD">
+                      </div>
+                    </div>
+                    <div class="col-md-4">
                         <div uib-dropdown is-open="statusb.isopen">
                             <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
                               {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
@@ -83,19 +100,6 @@
                               </li>
                             </ul>
                         </div>
-                      </div>
-                    </div>
-                    <div class="col-md-12">
-                      <div class="form-group col-md-6">
-                        <label for="genero">Genero </label>
-                        <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero" required="true"
-                               placeholder="Genero">
-                      </div>
-                      <div class="form-group col-md-6">
-                        <label for="fechanac">Fecha Nacimiento </label>
-                        <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
-                               placeholder="AA-MM-DD">
-                      </div>
                     </div>
                   </form>
                 </div>
