--- a/client/app/horario/horario.html
+++ b/client/app/horario/horario.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--div class="container">
     <h3 class="page-header">Nuevo horario:</h3>
     <div class="content">
       <div class="row">
@@ -72,15 +72,147 @@
         </form>
       </div>
     </div>
-</div>
+</div-->
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Horarios:</h3>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="hor in vm.horarios">
-        <li><a href="#" uib-tooltip="{{hor.fecha}}">{{hor.fecha}}</a></li>
-      </ul>
+      <h3 class="page-header">Horarios
+        <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
+          <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
+        </button>
+      </h3>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Doctor</th>
+            <th>Especialidad</th>
+            <th>Fecha</th>
+            <th>Hora inicio</th>
+            <th>Hora fin</th>
+            <th>Consultorio</th>
+            <th>Fichas</th>
+            <th>Fichas Dispo</th>
+            <th>Min x consulta</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="hor in vm.horarios">
+            <th>{{$index+1}}</th>
+            <td>{{obs.Medico.Persona.nombres}} {{obs.Medico.Persona.apaterno}} {{obs.Medico.Persona.amaterno}}</td>
+            <td>{{obs.motivo}}</td>
+            <td>{{vm.obtenerDia(obs.fecha_inicio)}}</td>
+            <td>{{vm.obtenerDia(obs.fecha_fin)}}</td>
+            <td>
+              <button  type="button" class="btn btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(obs)">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
     </div>
   </div>
 </div>
+
+
+<script type="text/ng-template" id="horario-modal.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Horario</h3>
+        </div>
+        <div class="modal-body">
+          <div class="container pequenio">
+              <div class="content">
+                <div class="row">
+                  <form role="form" >
+                    <div class="col-md-12">
+                      <div class="col-md-9">
+                        <div class="col-md-12">
+                          <div class="form-group col-md-4">
+                            <label for="nombre">Nro. Fichas </label>
+                            <input type="text" class="form-control" id="nombre" ng-model="vm.horario.fichas"
+                                   placeholder="Fichas habiles">
+                          </div>
+                          <div class="form-group col-md-4">
+                            <label for="nombre">Minutos </label>
+                            <input type="text" class="form-control" id="nombre" ng-model="vm.horario.minutos"
+                                   placeholder="Tiempo de cada cita">
+                          </div>
+                          <div class="form-group col-md-4">
+                            <label for="nombre">Consultorio </label>
+                            <input type="text" class="form-control" id="nombre" ng-model="vm.horario.consultorio"
+                                   placeholder="Consultorio">
+                          </div>
+                        </div>
+                        <div class="form-group col-md-12">
+                          <div class="col-md-6">
+                            <label for="nombre">Hora inicio </label>
+                            <uib-timepicker ng-model="vm.horario.hora_inicio" hour-step="vm.hstep" minute-step="vm.mstep" show-meridian="vm.ismeridian"></uib-timepicker>
+                          </div>
+                          <div class="form-group col-md-6">
+                            <label for="nombre">Hora Fin </label>
+                            <uib-timepicker ng-model="vm.horario.hora_fin" hour-step="vm.hstep" minute-step="vm.mstep" show-meridian="vm.ismeridian"></uib-timepicker>
+                          </div>
+                        </div>
+                        <div class="col-md-12">
+                          <div class="col-md-6">
+                            <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+                                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                                  {{ vm.medico.nombres || 'Seleccione un medico' }}
+                                  <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                                  <li role="menuitem" ng-repeat="med in vm.medicos">
+                                      <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
+                                  </li>
+                                </ul>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="btn-group control-group" uib-dropdown is-open="statusa.isopen">
+                                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                                  {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
+                                  <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                                  <li role="menuitem" ng-repeat="esp in vm.especialidades">
+                                      <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
+                                  </li>
+                                </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <label for="nombre">Fecha </label>
+                        <uib-datepicker ng-model="vm.horario.fecha" ></uib-datepicker>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.ok()">Guardar</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancelar</button>
+        </div>
+</script>
+
+<script type="text/ng-template" id="eliminar-horario.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Eliminar</h3>
+        </div>
+        <div class="modal-body">
+          <span> ¿Desea eliminar el horario?</span>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.eliminar()">SI</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">NO</button>
+        </div>
+</script>
